# pico_elancontrol

./: .gitignore  CMakeLists.txt  README.md  elancontrol.c  sendzpadcommand.pio
PCB/: Level_Shifter.kicad_sch  README.md  RJ45S.kicad_sch  TE_RJ45_5569265.kicad_sym  elan_interface.kicad_pcb  elan_interface.kicad_pro  elan_interface.kicad_sch  sym-lib-table  test_jer.csv  test_jer.kicad_pcb  test_jer.kicad_pro  test_jer.kicad_sch
PCB/Library.pretty/: 5569256-1.kicad_mod  NSOIC-8-L.kicad_mod  NSOIC-8-M.kicad_mod  NSOIC-8.kicad_mod
PCB/jlpcb/: elan_interface-B_Cu.gbl  elan_interface-B_Mask.gbs  elan_interface-B_Paste.gbp  elan_interface-B_Silkscreen.gbo  elan_interface-Edge_Cuts.gm1  elan_interface-F_Cu.gtl  elan_interface-F_Mask.gts  elan_interface-F_Paste.gtp  elan_interface-F_Silkscreen.gto  elan_interface-NPTH-drl_map.gbr  elan_interface-NPTH.drl  elan_interface-PTH-drl_map.gbr  elan_interface-PTH.drl
nec_transmit_library/: nec_transmit.c
nodejsserver/: package-lock.json  package.json  raw_serial.js  server.js  status_testing.js
nodejsserver/html/: frontend.js  index.html
testing/: CMakeLists.txt  main.c  rxSerial.pio
utils/: node_serial.js  package-lock.json  send_serial.py  serialRXtest.c  serial_RX_test.py  serial_test.py
